rbx_merge/src/tests/snapshots/rbx_merge__tests__merge__clean_one_sided_add_output_xml.snap
---
source: rbx_merge/src/tests/merge.rs
expression: "common::xml_string(&merged)?"
---
<roblox version="4">
  <Item class="Folder" referent="0">
    <Properties>
      <string name="Name">Folder</string>
      <BinaryString name="Tags"></BinaryString>
    </Properties>
    <Item class="StringValue" referent="1">
      <Properties>
        <string name="Name">Merge Added</string>
        <string name="Value">ours</string>
      </Properties>
    </Item>
  </Item>
</roblox>
