rbx_merge/src/tests/snapshots/rbx_merge__tests__merge__clean_one_sided_add_textconv.snap
---
source: rbx_merge/src/tests/merge.rs
expression: "textconv(&merged, Some(&path))?"
---
# rbx-merge — XML model (.rbxmx)
DataModel

  Folder "Folder"
    Attributes = {}
    Tags = []

    StringValue "Merge Added"
      Value = "ours"
