rbx_merge/src/tests/snapshots/rbx_merge__tests__merge__clean_one_sided_property_edit_diagnostics.snap
---
source: rbx_merge/src/tests/merge.rs
expression: diagnostics
---
[
    Diagnostic {
        severity: Warning,
        code: "weak_dom_metadata",
        message: "WeakDom does not model every Roblox file-level metadata field; the merge is semantic, not byte-perfect.",
        path: None,
    },
    Diagnostic {
        severity: Info,
        code: "output_format",
        message: "merged output encoded as XML model (.rbxmx)",
        path: Some(
            "rbx-test-files/models/three-intvalues/xml.rbxmx",
        ),
    },
]
