rbx_merge/src/tests/snapshots/rbx_merge__tests__merge__clean_one_sided_property_edit_textconv.snap
---
source: rbx_merge/src/tests/merge.rs
expression: "textconv(&merged, Some(&path), TextconvOptions::all())?"
---
# rbx-merge — XML model (.rbxmx)
DataModel

  IntValue "Value=1234567"
    Attributes = {}
    Tags = []
    Value = Int64(1234567)

  IntValue "Value=1337"
    Attributes = {}
    Tags = []
    Value = Int64(9001)

  IntValue "Value=-7654321"
    Attributes = {}
    Tags = []
    Value = Int64(-7654321)
