rbx_merge/src/tests/snapshots/rbx_merge__tests__merge__conflicting_property_edit_diagnostics.snap
---
source: rbx_merge/src/tests/merge.rs
expression: diagnostics
---
[
    Diagnostic {
        severity: Warning,
        code: "weak_dom_metadata",
        message: "WeakDom does not model every Roblox file-level metadata field; this prototype is semantic, not byte-perfect.",
        path: None,
    },
]
