rbx_merge/src/tests/snapshots/rbx_merge__tests__merge__unchanged_real_model_output_xml.snap
---
source: rbx_merge/src/tests/merge.rs
expression: "common::xml_string(&merged)?"
---
<roblox version="4">
  <Item class="IntValue" referent="0">
    <Properties>
      <string name="Name">Value=1234567</string>
      <BinaryString name="Tags"></BinaryString>
      <int64 name="Value">1234567</int64>
    </Properties>
  </Item>
  <Item class="IntValue" referent="1">
    <Properties>
      <string name="Name">Value=1337</string>
      <BinaryString name="Tags"></BinaryString>
      <int64 name="Value">1337</int64>
    </Properties>
  </Item>
  <Item class="IntValue" referent="2">
    <Properties>
      <string name="Name">Value=-7654321</string>
      <BinaryString name="Tags"></BinaryString>
      <int64 name="Value">-7654321</int64>
    </Properties>
  </Item>
</roblox>
